// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relationships should render dashboards normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="dashboard"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="dashboard"
            size="m"
            type="dashboardApp"
          />
        </EuiToolTip>
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      textStyle="normal"
      type="row"
    >
      <React.Fragment
        key="visualizations"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="success"
            size="m"
            title={
              <FormattedMessage
                defaultMessage="Dashboard"
                id="kbn.management.objects.objectsTable.relationships.dashboard.calloutTitle"
                values={Object {}}
              />
            }
          >
            <p>
              <FormattedMessage
                defaultMessage="Here are some visualizations used on this dashboard. You can safely delete this dashboard and the visualizations will still work properly."
                id="kbn.management.objects.objectsTable.relationships.dashboard.calloutText"
                values={Object {}}
              />
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <EuiInMemoryTable
          columns={
            Array [
              Object {
                "render": [Function],
                "width": 24,
              },
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
              },
              Object {
                "actions": Array [
                  Object {
                    "description": "View this saved object within Kibana",
                    "icon": "eye",
                    "name": "In app",
                    "onClick": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          executeQueryOptions={Object {}}
          items={
            Array [
              Object {
                "id": "1",
              },
              Object {
                "id": "2",
              },
            ]
          }
          pagination={true}
          responsive={true}
          sorting={false}
        />
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render errors 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="dashboard"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="dashboard"
            size="m"
            type="dashboardApp"
          />
        </EuiToolTip>
          
        MyDashboard
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiCallOut
      color="danger"
      size="m"
      title={
        <FormattedMessage
          defaultMessage="Error"
          id="kbn.management.objects.objectsTable.relationships.renderErrorMessage"
          values={Object {}}
        />
      }
    >
      foo
    </EuiCallOut>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render index patterns normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="index patterns"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="index patterns"
            size="m"
            type="indexPatternApp"
          />
        </EuiToolTip>
          
        MyIndexPattern*
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiLoadingKibana
      size="xl"
    />
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render searches normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="search"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="search"
            size="m"
            type="search"
          />
        </EuiToolTip>
          
        MySearch
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      textStyle="normal"
      type="row"
    >
      <React.Fragment
        key="indexPatterns"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="success"
            size="m"
            title={
              <FormattedMessage
                defaultMessage="Saved Search"
                id="kbn.management.objects.objectsTable.relationships.search.calloutTitle"
                values={Object {}}
              />
            }
          >
            <p>
              <FormattedMessage
                defaultMessage="Here is the index pattern tied to this saved search."
                id="kbn.management.objects.objectsTable.relationships.search.calloutText"
                values={Object {}}
              />
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <EuiInMemoryTable
          columns={
            Array [
              Object {
                "render": [Function],
                "width": 24,
              },
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
              },
              Object {
                "actions": Array [
                  Object {
                    "description": "View this saved object within Kibana",
                    "icon": "eye",
                    "name": "In app",
                    "onClick": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          executeQueryOptions={Object {}}
          items={
            Array [
              Object {
                "id": "1",
              },
            ]
          }
          pagination={true}
          responsive={true}
          sorting={false}
        />
      </React.Fragment>
      <React.Fragment
        key="visualizations"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title={
              <FormattedMessage
                defaultMessage="Warning"
                id="kbn.management.objects.objectsTable.relationships.warningTitle"
                values={Object {}}
              />
            }
          >
            <p>
              <FormattedMessage
                defaultMessage="Here are some visualizations that use this saved search. If you delete this saved search, these visualizations will not longer work properly."
                id="kbn.management.objects.objectsTable.relationships.search.visualizations.calloutText"
                values={Object {}}
              />
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <EuiInMemoryTable
          columns={
            Array [
              Object {
                "render": [Function],
                "width": 24,
              },
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
              },
              Object {
                "actions": Array [
                  Object {
                    "description": "View this saved object within Kibana",
                    "icon": "eye",
                    "name": "In app",
                    "onClick": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          executeQueryOptions={Object {}}
          items={
            Array [
              Object {
                "id": "2",
              },
            ]
          }
          pagination={true}
          responsive={true}
          sorting={false}
        />
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
</EuiFlyout>
`;

exports[`Relationships should render visualizations normally 1`] = `
<EuiFlyout
  closeButtonAriaLabel="Closes this dialog"
  hideCloseButton={false}
  maxWidth={false}
  onClose={[MockFunction]}
  ownFocus={false}
  size="m"
>
  <EuiFlyoutHeader
    hasBorder={false}
  >
    <EuiTitle
      size="m"
      textTransform="none"
    >
      <h2>
        <EuiToolTip
          content="visualization"
          delay="regular"
          position="top"
        >
          <EuiIcon
            aria-label="visualization"
            size="m"
            type="visualizeApp"
          />
        </EuiToolTip>
          
        MyViz
      </h2>
    </EuiTitle>
  </EuiFlyoutHeader>
  <EuiFlyoutBody>
    <EuiDescriptionList
      align="left"
      compressed={false}
      textStyle="normal"
      type="row"
    >
      <React.Fragment
        key="dashboards"
      >
        <EuiDescriptionListTitle
          style={
            Object {
              "marginBottom": "1rem",
            }
          }
        >
          <EuiCallOut
            color="warning"
            size="m"
            title={
              <FormattedMessage
                defaultMessage="Warning"
                id="kbn.management.objects.objectsTable.relationships.warningTitle"
                values={Object {}}
              />
            }
          >
            <p>
              <FormattedMessage
                defaultMessage="Here are some dashboards which contain this visualization. If you delete this visualization, these dashboards will no longer show them."
                id="kbn.management.objects.objectsTable.relationships.visualization.calloutText"
                values={Object {}}
              />
            </p>
          </EuiCallOut>
        </EuiDescriptionListTitle>
        <EuiInMemoryTable
          columns={
            Array [
              Object {
                "render": [Function],
                "width": 24,
              },
              Object {
                "field": "title",
                "name": "Title",
                "render": [Function],
              },
              Object {
                "actions": Array [
                  Object {
                    "description": "View this saved object within Kibana",
                    "icon": "eye",
                    "name": "In app",
                    "onClick": [Function],
                  },
                ],
                "name": "Actions",
              },
            ]
          }
          executeQueryOptions={Object {}}
          items={
            Array [
              Object {
                "id": "1",
              },
              Object {
                "id": "2",
              },
            ]
          }
          pagination={true}
          responsive={true}
          sorting={false}
        />
      </React.Fragment>
    </EuiDescriptionList>
  </EuiFlyoutBody>
</EuiFlyout>
`;
